# pypackage-templete

./: .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
docs/: index.md
docs/api/: index.md  main.md
docs/api/apps/: index.md
docs/api/apps/cli/: cli.md
docs/api/conf/: index.md  settings.md
docs/api/conf/templates/: dotenv_template.md
docs/api/core/: index.md
docs/api/core/management/: base.md
docs/api/core/management/commands/: crypton.md  run.md  start_project.md
docs/api/queries/: index.md
docs/api/scripts/: base.md  index.md
docs/api/services/: index.md
docs/api/services/criptografia/: crypton.md
docs/api/services/db/: db.md
docs/api/utils/: cnpj.md  converters.md  cpf.md  index.md  pandas.md
docs/api/validators/: base.md  cnpj_validator.md  cpf_validator.md  index.md
docs/assets/css/: progressbar.css
src/package/: main.py
src/package/apps/cli/: cli.py
src/package/conf/: settings.py
src/package/conf/templates/: dot_env_template.py  dotenv_template.py
src/package/core/management/: base.py
src/package/core/management/commands/: crypton.py  run.py  start_project.py
src/package/scripts/: base.py
src/package/services/criptografia/: crypton.py
src/package/services/db/: db.py
src/package/utils/: __init__.py  cnpj.py  converters.py  cpf.py  pandas.py
src/package/validators/: base.py  cnpj_validator.py  cpf_validator.py
tests/apps/cli/: test_cli.py
tests/db/: test_db.py
tests/utils/: test_cnpj.py  test_cpf.py
tests/validators/: test_cnpj_list_validator.py  test_cnpj_validator.py  test_cpf_list_validator.py  test_cpf_validator.py
